fix(main): fixes header z-index

--- a/src/modules/layout/ui/Header.css
+++ b/src/modules/layout/ui/Header.css
@@ -4,8 +4,9 @@
   left: 0;
   width: 100%;
   height: 50px;
-  background-color: #B2F3F3;
+  background-color: #b2f3f3;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
+  z-index: 10;
 }
 
 .header__inner {
